[Fix] prevent product card from overflow

--- a/src/views/Products/index.css
+++ b/src/views/Products/index.css
@@ -3,7 +3,7 @@
   color: black;
 }
 
-.products-container {
+.Products .products-container {
   display: grid;
   gap: 10px;
   margin: 2rem;
@@ -15,10 +15,19 @@
   max-width: 14rem;
   border: 1px solid rgb(140, 140, 140);
   border-radius: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .Products .grid-item:hover {
   border: 1px solid rgb(212, 212, 212);
   border-radius: 1rem;
   cursor: pointer;
+}
+
+.Products .product-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
